# WizardEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Launcher.cpp  README.md
FairyLab/: CMakeLists.txt  icon.rc  imgui.ini
FairyLab/assets/scripts/: LogScript.cpp  TestScript.cpp
FairyLab/assets/shaders/: f_shape2d.glsl
FairyLab/editor/shaders/: f_obj.glsl  v_obj.glsl
FairyLab/editorRes/shaders/: f_obj.glsl  v_obj.glsl
FairyLab/src/: AssetBrowser.cpp  AssetBrowser.h  FLApplication.cpp  FLApplication.h  FLLayer.cpp  FLLayer.h  FileExtensions.h  SceneViewport.cpp  SceneViewport.h
FairyLab/src/cpp/: AssetBrowser.cpp  FLApplication.cpp  FLLayer.cpp  SceneViewport.cpp
FairyLab/src/include/: AssetBrowser.h  FLApplication.h  FLLayer.h  SceneViewport.h
ScriptDLL/: CMakeLists.txt
ScriptDLL/src/: TestScript.cpp  init.cpp
WizardEngine/: CMakeLists.txt
WizardEngine/assets/shaders/: demo.glsl  f_square.glsl  shape2d.glsl  v_square.glsl
WizardEngine/core_shaders/glsl/4.0/: f_hdr_env.glsl  f_hdr_skycube.glsl  f_mix.glsl  f_outline.glsl  scene_phong.glsl  v_circle_batch.glsl  v_hdr_env.glsl  v_hdr_skycube.glsl  v_line_instance.glsl  v_outline_batch.glsl  v_quad.glsl  v_quad_batch.glsl  v_quad_instance.glsl
WizardEngine/cpp_scripting/: CMakeLists.txt
WizardEngine/cpp_scripting/src/: Test.cpp  init.cpp
WizardEngine/export_cmake/: CMakeLists.txt
WizardEngine/lib/: OpenAL32.lib  yaml-cppd.lib
WizardEngine/opengl/graphics/: FrameBuffer.cpp  GraphicsInitializer.cpp  IndexBuffer.cpp  RenderCommands.cpp  Shader.cpp  TextureBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
WizardEngine/project_template/: cmake_includes.txt  cmake_src.txt
WizardEngine/project_template/ScriptEngine/: CMakeLists.txt  Template.cpp
WizardEngine/project_template/cmake_tools/: CMakeLists.txt
WizardEngine/project_template/export_cmake/: CMakeLists.txt
WizardEngine/project_template/src/cpp/: game_application.cpp  game_layer.cpp
WizardEngine/project_template/src/include/: game_application.h  game_layer.h
WizardEngine/runtime/: CMakeLists.txt
WizardEngine/runtime/src/cpp/: Game.cpp
WizardEngine/runtime/src/include/: Game.h
WizardEngine/src/: Engine.h  Launcher.cpp  Launcher.h  Parent.cpp  Parent.h  WizardEngine.h
WizardEngine/src/camera/: Camera.cpp  Camera.h  CameraComponents.h  CameraController.cpp  CameraController.h
WizardEngine/src/core/: Application.cpp  Application.h  Assert.h  Build.cpp  Build.h  CameraController.cpp  CameraController.h  Core.h  Debug.h  Events.h  File.cpp  File.h  FileDialog.h  FileEditor.cpp  FileEditor.h  FileExtensions.h  FileSystem.cpp  FileSystem.h  FpsController.cpp  FpsController.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Layout.h  LayoutStack.cpp  LayoutStack.h  Logger.cpp  Logger.h  Memory.h  MouseCodes.h  String.h  Task.h  Thread.cpp  Thread.h  Time.h  Timer.cpp  (+8 more)
WizardEngine/src/core/events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
WizardEngine/src/cpp/: ProjectBuilder.cpp
WizardEngine/src/cpp/audio/: Buffer.cpp  Device.cpp  MediaPlayer.cpp  audio_buffer.cpp  audio_context.cpp  audio_core.cpp  audio_device.cpp  audio_device_manager.cpp  audio_listener.cpp  audio_player.cpp  audio_source.cpp  buffer.cpp  context.cpp  device.cpp  devices.cpp
WizardEngine/src/cpp/core/: Application.cpp  Bitmap.cpp  BitmapFile.cpp  Build.cpp  FileSystem.cpp  Fonts.cpp  FpsController.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Math.cpp  ProjectManager.cpp  Thread.cpp  Tools.cpp  filesystem.cpp  project_builder.cpp  uuid.cpp
WizardEngine/src/cpp/ecs/: Components.cpp  Entity.cpp  Family.cpp  Scene.cpp  ecs.cpp
WizardEngine/src/cpp/gui/: ImageLayout.cpp  ImguiLayer.cpp  MeshLayout.cpp  SceneHierarchy.cpp  theme.cpp
WizardEngine/src/cpp/imgui/: Colors.cpp  ImageLayout.cpp  ImguiLayer.cpp  MeshLayout.cpp  SceneHierarchy.cpp  theme.cpp
WizardEngine/src/cpp/io/: AudioFile.cpp  (+3 more)
WizardEngine/src/ecs/: Components.h  Entity.cpp  Entity.h  Family.cpp  Family.h  Scene.cpp  Scene.h  System.cpp  System.h
WizardEngine/src/events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
WizardEngine/src/graphics/: GraphicsContext.cpp  GraphicsContext.h  GraphicsFactory.h  GraphicsModule.cpp  GraphicsModule.h  GraphicsObject.cpp  GraphicsObject.h
WizardEngine/src/imgui/: Colors.cpp  Colors.h  DemoLayout.cpp  DemoLayout.h  EntityLayout.cpp  EntityLayout.h  FileEditor.cpp  FileEditor.h  ImageLayout.cpp  ImageLayout.h  ImguiBuild.cpp  ImguiLayer.cpp  ImguiLayer.h  MeshLayout.cpp  MeshLayout.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneLayout.cpp  SceneLayout.h  ScenePanel.cpp  ScenePanel.h
WizardEngine/src/include/: Launcher.h  ProjectBuilder.h  WizardEngine.h
WizardEngine/src/math/: ModelMatrix.h  ProjectionMatrix.cpp  ProjectionMatrix.h  TransformComponent.cpp  TransformComponent.h  TransformMatrix.cpp  TransformMatrix.h  Uniform.cpp  Uniform.h  ViewMatrix.cpp  ViewMatrix.h  ViewProjectionMatrix.cpp  ViewProjectionMatrix.h
WizardEngine/src/network/: Client.cpp  Client.h  Config.h  NetworkClient.cpp  NetworkClient.h
WizardEngine/src/platform/: Platform.h
WizardEngine/src/scripting/: ScriptBuild.cpp  ScriptBuild.h  ScriptCompiler.cpp  ScriptCompiler.h  ScriptComponents.h  ScriptSystem.cpp  ScriptSystem.h  Scriptable.cpp  Scriptable.h
WizardEngine/src/transform/: TransformComponents.cpp  TransformComponents.h
WizardEngine/windows/core/: Window.cpp
WizardEngine/windows/tools/: FileDialog.cpp
WizardStudio/: CMakeLists.txt  icon.rc  imgui.ini  properties.yaml
WizardStudio/editor/shaders/: v_obj.glsl
WizardStudio/src/cpp/: Acitvity.cpp  Activity.cpp  Application.cpp  AssetBrowser.cpp  SceneViewport.cpp
WizardStudio/src/include/: Activity.h  Application.h  AssetBrowser.h  SceneViewport.h
WizardTest/: CMakeLists.txt  Visual  Visual.ini  properties.yaml
WizardTest/assets/model/: DesertEagle.fbx
WizardTest/assets/shaders/: f_shape2d.glsl  v_shape2d.glsl
WizardTest/src/: Launcher.cpp  TestApplication.cpp  TestApplication.h  TestLayer.h  main.cpp
prebuild/imgui/: CMakeLists.txt
(+686 files in other folders)
